Adding gc logs in azkaban